test/cases/good/extra020.lat
int main() {
    string[] arr = new string[2];

    assert(arr[0].length, 0);
    assert(arr[1].length, 0);

    arr[0] = "abc";
    arr[1] = arr[1] + 2 * arr[0];

    assert(arr[0].length, 3);
    assert(arr[1].length, 6);

    return 0;
}

void assert(int actual, int expected) {
    if (actual != expected) error();
}