test/cases/bad/bad048.lat
// Not lvalue

int main() {
    (new string[10]).length = 11;
    return 0;
}
